<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="book"
            type="com.klibre.models.Book"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <ScrollView
            android:fillViewport="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context="com.klibre.DetailsActivity">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/text_title"
                        android:text="@{book.title}"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <ImageView
                                android:id="@+id/iv_cover_book"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:scaleType="fitXY"
                                android:gravity="center_vertical"
                                app:coverUrl="@{book.coverURL}"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_date"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorWhite"
                                />
                            <TextView
                                android:id="@+id/tv_date_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{book.date}"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des"
                                android:textColor="@color/colorLightGray"/>
                            <TextView
                                android:id="@+id/tv_description"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_description"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorWhite"/>
                            <EditText
                                android:id="@+id/tv_description_text"
                                android:layout_width="match_parent"
                                android:layout_height="233dp"
                                android:gravity="center_vertical"
                                android:text="@{book.description}"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des"
                                android:editable="false"
                                android:scrollbarStyle="insideInset"
                                android:scrollbars="vertical"
                                android:textColor="@color/colorLightGray"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">
                        <TextView
                            android:id="@+id/tv_authors"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/sub_authors"
                            android:textSize="@dimen/text_sub_title"
                            android:textColor="@color/colorWhite"/>
                        <TextView
                            android:id="@+id/tv_authors_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@{book.authors}"
                            android:textSize="@dimen/text_des"
                            android:layout_marginLeft="@dimen/text_indent"
                            android:textColor="@color/colorLightGray"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_isbn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_isbn"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorWhite" />
                            <TextView
                                android:id="@+id/tv_isbn_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{book.isbn}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textColor="@color/colorLightGray"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_publisher"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_publisher"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorWhite"/>
                            <TextView
                                android:id="@+id/tv_publisher_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{book.publisher}"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des"
                                android:textColor="@color/colorLightGray"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>